--- a/namoo-club4-web/pom.xml
+++ b/namoo-club4-web/pom.xml
@@ -131,6 +131,11 @@
 			<artifactId>mariadb-java-client</artifactId>
 			<version>1.1.7</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-remote-shell</artifactId>
+			<version>1.0.0.RELEASE</version>
+		</dependency>
 	</dependencies>
     <build>
         <plugins>
