--- a/namoo-club4-web/src/main/webapp/WEB-INF/web.xml
+++ b/namoo-club4-web/src/main/webapp/WEB-INF/web.xml
@@ -43,7 +43,7 @@
 	
 	<filter-mapping>
 		<filter-name>characterEncoding</filter-name>
-		<url-pattern>/</url-pattern>
+		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
 </web-app>
